--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
-.App {
-  font-size: 4rem;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap");
+@import "./styles/variables.scss";
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.app {
+  display: flex;
 }
