--- a/src/App.scss
+++ b/src/App.scss
@@ -7,4 +7,8 @@ body {
 
 .app {
   display: flex;
+  // grid-template-columns: 20% 60% 20%;
+  height: 100vh;
+  max-width: 130rem;
+  margin: 0 auto;
 }
