--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,6 +1,8 @@
 @import "../styles/variables";
 
 .sidebar {
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: column;
   height: 100vh;
