--- a/src/components/Widgets.scss
+++ b/src/components/Widgets.scss
@@ -1,5 +1,48 @@
 @import "../styles/variables";
 
 .widgets {
-  flex: 0.2;
+  max-height: 100vh;
+  overflow-y: scroll;
+  padding: 0 2rem;
+  padding-top: 1rem;
+  flex: 1;
+
+  //hide the scrollbar
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none; //chrome,safari,opera
+  }
+
+  &__searchIcon {
+    font-size: 2rem !important ;
+    color: gray;
+  }
+  &__inputs {
+    display: flex;
+    align-items: center;
+    background-color: $twitter-background;
+    padding: 1rem;
+    gap: 2rem;
+    border-radius: 2rem;
+  }
+  &__inputField {
+    width: 100%;
+    background-color: $twitter-background;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+  }
+
+  &__widgetContainer {
+    margin: 1rem 0 0 0;
+    padding: 1rem;
+    background-color: #f5f8fa;
+    border-radius: 3rem;
+
+    & h2 {
+      font-weight: 800;
+      font-size: 1.8rem;
+    }
+  }
 }
