--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -1,4 +1,5 @@
 @import "../styles/variables";
+@import "../styles/mixins";
 
 .post {
   display: flex;
@@ -7,6 +8,10 @@
 
   &__avatar {
     padding: 2rem;
+
+    @include respond(phone) {
+      padding: 1rem 0.5rem;
+    }
   }
 
   &__body {
@@ -14,6 +19,9 @@
     padding: 2rem;
     padding-left: 0;
     width: 100%;
+    @include respond(phone) {
+      padding: 1rem;
+    }
   }
   &__badge {
     margin: 0 0.3rem;
