--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -1,4 +1,5 @@
 @import "../styles/variables";
+@import "../styles/mixins";
 
 .sidebar {
   position: sticky;
@@ -10,10 +11,24 @@
   border-right: 1px solid $twitter-background;
   flex: 0.2;
 
+  @include respond(tab-land) {
+    align-items: flex-end;
+  }
+  @include respond(tab-port) {
+    padding-right: 1rem;
+  }
+  @include respond(phone) {
+    padding-right: 0rem;
+    padding-left: 0.5rem;
+  }
+
   & > .MuiSvgIcon-root {
     font-size: 3rem;
     color: $twitter-color;
     margin-left: 1rem;
+    @include respond(tab-land) {
+      margin-right: 1rem;
+    }
   }
 }
 
@@ -23,6 +38,10 @@
   align-items: flex-start;
   gap: 0.5rem;
   margin: 1rem 0;
+
+  @include respond(tab-land) {
+    align-items: flex-end;
+  }
 }
 
 .sidebar__button {
