--- a/src/components/Tweetbox.scss
+++ b/src/components/Tweetbox.scss
@@ -1,4 +1,5 @@
 @import "../styles/variables";
+@import "../styles/mixins";
 
 .tweetbox {
   position: relative;
@@ -8,6 +9,9 @@
   padding: 1rem 2rem;
   display: flex;
 
+  @include respond(phone) {
+    padding: 1rem;
+  }
   &__avatar {
     position: absolute;
     top: 1rem;
