--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./styles/mixins";
+
 *,
 *::after,
 *::before {
@@ -7,4 +9,19 @@
 }
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
+
+  @include respond(tab-land) {
+    font-size: 58%; //1 rem  = 9.28px
+  }
+  @include respond(tab-port) {
+    font-size: 55%; //1REM = 8.8px
+  }
+  @include respond(mobile) {
+    font-size: 50%; //1REM = 8px
+  }
+
+  @include respond(big-destop) {
+    font-size: 75%; //1REM = 14.4px
+  }
 }
