--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -30,19 +30,22 @@
   }
   &__headerText > h3 {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     font-size: 1.5rem;
     margin-bottom: 1rem;
   }
 
   &__headerSpan {
+    margin-left: 1rem;
+    display: flex;
+    align-items: center;
     font-weight: 700;
     font-size: 1.2rem;
     color: #888;
   }
 
   &__headerDescription {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 500;
   }
 
@@ -62,8 +65,9 @@
   }
 
   &__footer {
+    margin-top: 2rem;
     margin-left: auto;
-    margin-right: 4rem;
+    margin-right: 2rem;
     display: flex;
     justify-content: space-between;
 
