--- a/src/components/login.scss
+++ b/src/components/login.scss
@@ -86,8 +86,13 @@
       border: none;
       outline: none;
       font-size: 2rem;
+      background-color: $twitter-color;
+      color: white;
+      font-weight: 500;
+      letter-spacing: 1px;
       @include respond(tab-port) {
-        margin-left: 0rem;
+        margin: 0 auto;
+        width: 100%;
       }
     }
   }
